# homework_14_1

./: README.md
homework_14_1-main/: .gitignore  README.md  pyproject.toml  requirements.txt
homework_14_1-main/src/: base_category.py  category.py  category_iterator.py  exceptions.py  lawn_grass.py  order.py  product.py  read_file.py  smartphone.py
homework_14_1-main/tests/: conftest.py  test_category.py  test_category_iterator.py  test_lawn_grass.py  test_order.py  test_print_mixin.py  test_product.py  test_smartphone.py
