[tool.poetry]
name = "homework-14-1"
version = "0.1.0"
description = ""
authors = ["Gabdulla <gabdulla2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
requests = "^2.32.3"
openpyxl = "^3.1.5"


[tool.poetry.group.lint.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
